# RayneEngine

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/: Application.cpp  Application.h  SceneManager.cpp  SceneManager.h
src/Core/Application/: Application.cpp  Application.h
src/Core/Primitives/: CirclePrimitive.h  Primitive.h  PrimitiveManager.h  RectanglePrimitive.h  TrianglePrimitive.h
src/Core/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Core/ViewPort/: EditorCamera2D.cpp  EditorCamera2D.h
